# workload/api/workload.swagger.json
@@ -17,6 +17,30 @@
   "paths": {
     "/v1/workload/authorities": {
       "post": {
+        "operationId": "CreateCertAuthority",
+        "responses": {
+          "200": {
+            "description": "",
+            "schema": {
+              "$ref": "#/definitions/protobufEmpty"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/apiCertAuthority"
+            }
+          }
+        ],
+        "tags": [
+          "Service"
+        ]
+      },
+      "put": {
         "operationId": "UpsertCertAuthority",
         "responses": {
           "200": {
@@ -164,7 +188,7 @@
       }
     },
     "/v1/workload/permissions": {
-      "post": {
+      "put": {
         "operationId": "UpsertPermission",
         "responses": {
           "200": {
@@ -292,7 +316,7 @@
       }
     },
     "/v1/workload/signpermissions": {
-      "post": {
+      "put": {
         "operationId": "UpsertSignPermission",
         "responses": {
           "200": {
@@ -394,7 +418,7 @@
       }
     },
     "/v1/workload/workloads": {
-      "post": {
+      "put": {
         "operationId": "UpsertWorkload",
         "responses": {
           "200": {
